# mirith_rust_implementation

./: Cargo.toml  README.md  build.rs  config.yml
benches/: keccak.rs
src/: api.rs  challenges.rs  config.rs  fips202.rs  hash.rs  lib.rs  main.rs  matrix.rs  params.rs  prng.rs  random.rs  seed_tree.rs
src/common/: numeric.rs
