[package]
name = "mirith"
version = "0.1.0"
authors = ["mrezahassani@protonmail.com"]
edition = "2021"

[features]
default = ["reference"]
reference = []
optimized = []
avx2 = []
neon = []
cortex-m4 = []
hypercube = []
deterministic = []

[dependencies]
base64 = "0.22.1"
lazy_static = "1.4.0"
openssl = "0.10.64"
rand = { version = "0.8.5", features = ["small_rng"] }
rand_chacha = "0.3.1"

[dev-dependencies]
criterion = "0.5"

[build-dependencies]
serde = { version = "1.0.202", features = ["derive"] }
config = "0.14.0"


[[bench]]
name = "keccak"
harness = false

[profile.release]
debug = true
lto = true
codegen-units = 1
